--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger mt-0 fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-success mt-0 fixed-top">
       <a class="navbar-brand" href="/">YelpCamp</a>
 
       <button
