--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,11 @@
   
 </div><!-- /.container -->
+<footer class="footer">
+  <div class="container">
+    <hr>
+    <p class="text-muted" align="center">&copy;  Yelpcamp by Prathamesh Jondhalekar | <a href="/campgrounds">Home</a> | <a href="/campgrounds/new">New Campground</a></p>
+  </div>
+</footer>
 <!-- jQuery CDN -->
 <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
