--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,7 @@
 <footer class="footer">
   <div class="container">
     <hr>
-    <p class="text-muted" align="center">&copy;  Yelpcamp by Prathamesh Jondhalekar | <a href="/campgrounds">Home</a> | <a href="/campgrounds/new">New Campground</a></p>
+    <p class="text-muted" align="center">&copy;  Yelpcamp by GA7 | <a href="/campgrounds">Home</a> | <a href="/campgrounds/new">New Campground</a></p>
   </div>
 </footer>
 <!-- jQuery CDN -->
